--- a/impl/dashboard/assets/css/index.css
+++ b/impl/dashboard/assets/css/index.css
@@ -105,3 +105,13 @@ ul {
     transform: translateY(100%);
   }
 }
+
+.wrap {
+  display: flex;
+  flex-direction: column;
+  padding-left: 0;
+}
+
+.wrap h2 {
+  padding-top: 0.5rem;
+}
